--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -9,16 +9,18 @@
           Vous êtes cordialement invité.e à vous joindre à nous pour signer l’Appel ci-dessous. Cet Appel vise à exiger la convocation d’une Assemblée constituante citoyenne chargée de rédiger la première constitution de l’histoire du Québec.
       =@event.body.to_s.gsub("\n", "<br />").html_safe
       
-    %p.lead.text-center.alert.alert-danger
-      =link_to "Une Constitution, un vieux papier inutile? Rien n’est plus faux!", constitution_path, class: "alert-link"
+    -if @event.id == 2
+      %p.lead.text-center.alert.alert-danger
+        =link_to "Une Constitution, un vieux papier inutile? Rien n’est plus faux!", constitution_path, class: "alert-link"
 
+      %p Joignez-vous à nous pour promouvoir, préparer et provoquer la convocation d'une Assemblée constituante citoyenne!
   .col-md-4
     %h3.sub-section{style: "margin-top:0"}
       -if @event.id == 2
         Signez l'appel ici
       -else
         Inscrivez-vous
-    .help-block Notez que seuls vos noms et prénoms seront rendus publics.
+    .help-block Notez que seuls vos noms et prénoms seront rendus publics. #{link_to "Voir les " + @event.participants.count.to_s + " signatures", event_participants_path(event_id: 2)}.
     =simple_form_for([@event, @participant || Participant.new(event_id: @event.id)], url: {controller: "participants", action: "create", anchor: "event-form", event_id: @event.id}) do |f|
       .well.well-sm
         .row
@@ -35,7 +37,8 @@
       %br/
       %br/
       %h4.sub-section À voir aussi
-      %ul.list.small
+      %ul.list
         %li= link_to "Devenir partenaire actif", partenaire_actif_path
         %li= link_to "Une Constitution, un vieux papier inutile? Rien n’est plus faux!", constitution_path
         %li= link_to "Engagement solennel des personnes candidates aux élections d'octobre 2018", engagement_candidats_path
+        %li= link_to "Signez le manifeste de l'ACCQ", manifest_path
