--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -18,13 +18,13 @@
       %li
         Pour écrire notre constitution, il faut avoir recours au peuple souverain, car les partis politiques sont sur ce sujet en conflit d’intérêts. Ce n’est pas aux gens au pouvoir d’écrire les règles du pouvoir.
       %li
-        L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est d’inviter la population à y participer et à proposer en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, participative, non partisane et libre dans ses délibérations, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à prévenir le contrôle de l’information par des intérêts particuliers.
+        L’Assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est d’inviter la population à y participer et à proposer en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, participative, non partisane et libre dans ses délibérations, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à prévenir le contrôle de l’information par des intérêts particuliers.
       %li
         L'Assemblée constituante citoyenne doit idéalement être convoquée par l’Assemblée nationale pour s’assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec, au Canada et à l’international.
       %li
         Nous, citoyennes et citoyens responsables, nous nous engageons à promouvoir, à préparer et à provoquer la convocation d’une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
       %li
-        Voici la #{link_to "mission", mission_path} que s'est donnée l'Alliance pour une Constituante citoyenne du Québec (ACCQ) 
+        Voici la #{link_to "mission", mission_path} que s'est donnée l'Alliance pour une constituante citoyenne du Québec (ACCQ)
 
   .col-md-4
     %p
