--- a/app/views/home/_mission_nav.haml
+++ b/app/views/home/_mission_nav.haml
@@ -1,5 +1,5 @@
 .btn-group.btn-group-justified.btn-group-lg{role: "group"}
-  =link_to "1. Mission", mission_path, class: active == :mission ? "btn btn-info" : "btn btn-default"
-  =link_to "2. Vision", notre_vision_path, class: active == :vision ? "btn btn-info" : "btn btn-default"
-  =link_to "3. Moyens et objectifs", notre_moyen_path, class: active == :moyen ? "btn btn-info" : "btn btn-default"
+  =link_to "1. Vision", notre_vision_path, class: active == :vision ? "btn btn-info" : "btn btn-default"
+  =link_to "2. Mission", mission_path, class: active == :mission ? "btn btn-info" : "btn btn-default"
+  =link_to "3. Objectifs et moyens", notre_moyen_path, class: active == :moyen ? "btn btn-info" : "btn btn-default"
   =link_to "4. Nous rejoindre", mission_nous_rejoindre_path, class: active == :nous_rejoindre ? "btn btn-info" : "btn btn-default"
