--- a/app/views/home/mission_nous_rejoindre.haml
+++ b/app/views/home/mission_nous_rejoindre.haml
@@ -12,7 +12,7 @@
     %p Plus nous serons nombreux à élaborer une constitution préparatoire et plus elle sera représentative de la volonté populaire du Québec.
     
     %p Une fois rédigée, cette constitution «préparatoire» sera alors l’assise d’une nouvelle démarche convoquée par l’Assemblée nationale visant à mobiliser la population du Québec pour qu'elle y participe.
-    %p Si vous êtes de ceux et celles qui veulent réformer avec NOUS la façon dont nous sommes gouvernés et qui aimeraient participer à la création d’un projet de société plus conforme à nos aspirations, n'hésitez pas à #{link_to "rejoindre votre ACRQ", hives_path}.
+    %p Si vous êtes de ceux et celles qui veulent réformer avec NOUS la façon dont nous sommes gouvernés et qui aimeraient participer à la création d’un projet de société plus conforme à vos aspirations, #{link_to "rejoignez votre ACRQ", hives_path}.
     %p Vous trouverez, dans votre regroupement régional, le réseau et les moyens nécessaires pour favoriser l'instauration d'une véritable démocratie.
 
-    %p= link_to "Pour rejoindre votre Alliance constituante régionale québécoise (ACRQ)…", hives_path
+    %p.lead= link_to "Découvrez votre ACRQ", hives_path
