--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -5,8 +5,6 @@
 
 .row
   .col-md-12
-    %p
-      À la suite de la 4e rencontre nationale qui s’est tenue à Trois-Rivières en mai 2016, il a été convenu de mettre sur pied huit comités dont les responsables auront pour rôle de coordonner les activités de l’ACCQ. En date du 24 novembre 2016, voici les responsables choisis :
 
     %ul.list
       %li Comité Communication Jean-Claude Gauthier, ACRQ 13 - Laval
@@ -17,5 +15,5 @@
       %li Comité Secrétariat-registrariat Danielle Morin, ACRQ 05 - Estrie
 
 
-
-.alert.alert-info Pour nous joindre: #{mail_to "coi@constituantecitoyenne.quebec"}
+    %p L'ACCQ tient à remercier ceux et celles qui s'impliquent avec dévouement et conviction.
+.alert.alert-info Pour nous joindre: #{mail_to "info@constituantecitoyenne.quebec"}
