--- a/app/views/home/objectifs.haml
+++ b/app/views/home/objectifs.haml
@@ -55,4 +55,4 @@
 
     %p Vous trouverez, dans votre regroupement régional, le réseau et les moyens nécessaires pour favoriser l'instauration d'une véritable démocratie.
 
-    %p.lead Rejoignez votre Alliance constituante régionale québécoise (ACRQ).
+    %p.lead= link_to "Découvrez votre ACRQ", hives_path
