--- a/app/views/home/vision.haml
+++ b/app/views/home/vision.haml
@@ -14,4 +14,4 @@
 
     %p Pour nous, l’autorité ultime en démocratie, c’est NOUS, le peuple. 
     
-    %p= link_to "Pour rejoindre votre Alliance constituante régionale québécoise (ACRQ)…", hives_path
+    %p.lead= link_to "Découvrez votre ACRQ", hives_path
