--- a/app/views/hives/index.haml
+++ b/app/views/hives/index.haml
@@ -1,5 +1,5 @@
 -content_for :page_title do
-  Liste des Alliances constituantes régionales québécoises (ACRQ)
+  Liste des organisations régionales (ACRQ)
 
 -breadcrumb :hives
 .row
