--- a/app/views/home/mission.haml
+++ b/app/views/home/mission.haml
@@ -10,3 +10,4 @@
       Le grand chantier de la Constituante commence maintenant!
     %p
       L'Alliance pour une constituante citoyenne du Québec se donne comme mission de promouvoir, de préparer et de provoquer la convocation d’une Assemblée constituante non partisane, totalement libre dans ses délibérations, ayant comme mandat la rédaction d'une Constitution par et pour le peuple.
+    %p.lead= link_to "Découvrez votre ACRQ", hives_path
