Mise à jour de la page nous joindre

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -4,16 +4,36 @@
 -breadcrumb :nous_joindre
 
 .row
-  .col-md-12
-
+  .col-md-6
+    %p Voici les membres de l’équipe de coordination nationale de l’ACCQ, en date du 30 mars 2018  :
+ 
     %ul.list
-      %li Comité Communication Jean-Claude Gauthier, ACRQ 13 - Laval
-      %li Comité Éducation citoyenne Philippe Malric, ACRQ 06 - Montréal
-      %li Comité Éthique Marie-Luce Fortier, ACRQ 03 – Capitale-Nationale
-      %li Comité Financement Éric Groleau, ACRQ 04 - Mauricie
-      %li Comité Multimédia (TI) Marc-André Robillard, ACRQ 14 – Lanaudière
-      %li Comité Secrétariat-registrariat Danielle Morin, ACRQ 05 - Estrie
+      %li Alain M. Bergeron - #{mail_to "alainmbergeron@hotmail.com"} - ACRQ 05 - Estrie
+      %li Michèle Clément - #{mail_to "michele.clement44@gmail.com"} - ACRQ 16 - Montérégie
+      %li Céline Couturier - #{mail_to "celinecouturier71@gmail.com"} - ACRQ 03 - Capitale-Nationale
+      %li Danielle Gagnon - #{mail_to "daniellegagnon58@outlook.com"} - ACRQ  03 - Capitale-Nationale
+      %li Steve Graindlair - #{mail_to "stevegraindlair@gmail.com"} - ACRQ 12 - Chaudière-Appalaches
+      %li Luc Harbour - #{mail_to "lucharbour@gmail.com"} - ACRQ 05 - Estrie
+      %li Danielle Morin – #{mail_to "daniellemorin2013@hotmail.com"} - ACRQ 05 - Estrie
+      %li Daniel Raunet - #{mail_to "draunet@hotmail.fr"} - ACRQ 16 - Montérégie
+      %li Andréanne Sylvain - #{mail_to "asylvain321@gmail.com"} - ACRQ 09 - Côte-Nord
+ 
+  .col-md-6
+    %p Notez que plusieurs comités sont formés ou sont en cours de formation, pour atteindre notre objectif d’ici la prochaine élection d’octobre 2018 :
+ 
+    %ul.list
+      %li Activation des régions – Responsable : Danielle Morin
+      %li Argumentaire – Responsable : Alain M. Bergeron
+      %li Communications – Responsable : Andréanne Sylvain
+      %li Décret de convocation - Responsable : Alain M. Bergeron
+      %li Financement / Enregistrement -
+      %li Multimédia (TI) -  Responsables : François Lamontagne et Marc-André Robillard
+      %li Rédaction des formulaires d’engagement – Responsable : Danielle Gagnon
+      %li Tournée nationale à vélo 2018 – Responsable : Alain M. Bergeron
+      %li Éducation populaire / Gentils virus -
 
-
-    %p L'ACCQ tient à remercier ceux et celles qui s'impliquent avec dévouement et conviction.
-.alert.alert-info Pour nous joindre: #{mail_to "info@constituantecitoyenne.quebec"}
+    %p Pour tout intérêt à vous impliquer dans l’un ou l’autre de ces comités, écrivez-nous à #{mail_to "info@constituantecitoyenne.quebec"}.
+ 
+  .row
+    .col-md-12
+      %p L'ACCQ tient à remercier ceux et celles qui s'impliquent avec dévouement et conviction.
