changer les adresses de courriel constituantecitoyenne.quebec vers accq.quebec

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -32,7 +32,7 @@
       %li Tournée nationale à vélo 2018 – Responsable : Alain M. Bergeron
       %li Éducation populaire / Gentils virus -
 
-    %p Pour tout intérêt à vous impliquer dans l’un ou l’autre de ces comités, écrivez-nous à #{mail_to "info@constituantecitoyenne.quebec"}.
+    %p Pour tout intérêt à vous impliquer dans l’un ou l’autre de ces comités, écrivez-nous à #{mail_to "info@accq.quebec"}.
  
   .row
     .col-md-12
