--- a/app/views/home/partenaire_actif.html.haml
+++ b/app/views/home/partenaire_actif.html.haml
@@ -2,4 +2,4 @@
   Devenez partenaire actif
 
 %p
-  Si vous avez du temps à nous consacrer pour nous aider davantage dans notre initiative, nous vous invitons à vous joindre à notre équipe de partenaires. Communiquez avec nous à #{mail_to "info@constituantecitoyenne.quebec"}. Nous  vous contacterons incessamment pour vous expliquer comment participer à notre réflexion collective et à nos actions. Nous travaillons selon les principes du consensus et de la démocratie participative.
+  Si vous avez du temps à nous consacrer pour nous aider davantage dans notre initiative, nous vous invitons à vous joindre à notre équipe de partenaires. Communiquez avec nous à #{mail_to "info@accq.quebec"}. Nous  vous contacterons incessamment pour vous expliquer comment participer à notre réflexion collective et à nos actions. Nous travaillons selon les principes du consensus et de la démocratie participative.
