--- a/app/views/structure/structure_nationale/_comites_nationaux.haml
+++ b/app/views/structure/structure_nationale/_comites_nationaux.haml
@@ -16,7 +16,7 @@
     %li Accomplit toute autre tâche jugée pertinente.
 
   %p
-    %strong Pour vous joindre à ce comité: #{mail_to "mobilisation@constituantecitoyenne.quebec"}
+    %strong Pour vous joindre à ce comité: #{mail_to "mobilisation@accq.quebec"}
 %section#comite-financement
   %h4.sub-section Financement
   %ul
@@ -31,7 +31,7 @@
     %li Évalue la possible campagne de financement « picbadge »;
     %li Accomplit toute autre tâche jugée pertinente.
   %p
-    %strong Pour vous joindre à ce comité: #{mail_to "financement@constituantecitoyenne.quebec"}
+    %strong Pour vous joindre à ce comité: #{mail_to "financement@accq.quebec"}
 
 %section#comite-communications
   %h4.sub-section Communication
@@ -48,7 +48,7 @@
     %li Accomplit toute autre tâche jugée pertinente.
 
   %p
-    %strong Pour vous joindre à ce comité: #{mail_to "communication@constituantecitoyenne.quebec"}
+    %strong Pour vous joindre à ce comité: #{mail_to "communication@accq.quebec"}
 
 
 %section#comite-education
@@ -60,7 +60,7 @@
     %li Répertorie des exemples de constitutions dans le monde et au Québec;
     %li Accomplit toute autre tâche jugée pertinente.
   %p
-    %strong Pour vous joindre à ce comité: #{mail_to "education@constituantecitoyenne.quebec"}
+    %strong Pour vous joindre à ce comité: #{mail_to "education@accq.quebec"}
 
 
 %section#comite-web
@@ -73,7 +73,7 @@
     %li Accomplit toute autre tâche jugée pertinente.
 
   %p
-    %strong Pour vous joindre à ce comité: #{mail_to "web@constituantecitoyenne.quebec"}
+    %strong Pour vous joindre à ce comité: #{mail_to "web@accq.quebec"}
 
 %section#comite-secretariat
   %h4.sub-section Secrétariat-registrariat
@@ -86,7 +86,7 @@
     %li Accomplit toute autre tâche jugée pertinente.
 
   %p
-    %strong Pour vous joindre à ce comité: #{mail_to "secretariat@constituantecitoyenne.quebec"}
+    %strong Pour vous joindre à ce comité: #{mail_to "secretariat@accq.quebec"}
 
 
 %section#comite-resolution
@@ -129,7 +129,7 @@
 
 
 %p
-  %strong Pour vous joindre à ce comité: #{mail_to "mediation@constituantecitoyenne.quebec"}
+  %strong Pour vous joindre à ce comité: #{mail_to "mediation@accq.quebec"}
 
 %section#comite-evenements
   %h4.sub-section Événements
