--- a/app/views/structure/structure_nationale/_conseil_des_operations.haml
+++ b/app/views/structure/structure_nationale/_conseil_des_operations.haml
@@ -5,7 +5,7 @@
   =image_tag "organigramme/conseil_des_operations.jpg", class: "img-responsive thumbnail"
 
 %p
-  Le Conseil des opérations (C.O.) se veut le cœur de la structure horizontale de l’#{t("org_name")}. Toutes ses décisions sont prises en collégialité. C’est lui qui voit au bon fonctionnement et à l’harmonisation de nos structures. Son mandat est d’assurer l’unité de toutes les entités actuellement formées et à venir. Ses membres doivent être choisis avec beaucoup de vigilance puisque c’est l’épine dorsale de notre structure et le fer de lance de notre démarche. L’engagement des membres qui en feront partie doit être basé sur une intégrité à toute épreuve pour ne servir aucun autre intérêt que celui du peuple.    
+  Le Conseil des opérations (C.O.) se veut le cœur de la structure horizontale de l’#{t("org_name")}. Toutes ses décisions sont prises en collégialité. C’est lui qui voit au bon fonctionnement et à l’harmonisation de nos structures. Son mandat est d’assurer l’unité de toutes les entités actuellement formées et à venir. Ses membres doivent être choisis avec beaucoup de vigilance puisque c’est l’épine dorsale de notre structure et le fer de lance de notre démarche. L’engagement des membres qui en feront partie doit être basé sur une intégrité à toute épreuve pour ne servir aucun autre intérêt que celui du peuple.
 
 %p
   Le C.O. est l'instance qui fait le lien entre les régions et assure la libre circulation des informations. Il s’assure que toutes les décisions entérinées par la majorité absolue des membres d’une ACRQ soient acheminées dans les autres régions pour que celles-ci  les entérinent à leur tour.
@@ -21,4 +21,4 @@
   %li Administre et assure, en compagnie du comité financement et trésorerie, la saine gestion des argents perçus.
 
 %p
-  =mail_to "coi@constituantecitoyenne.quebec"
+  =mail_to "coi@accq.quebec"
