--- a/app/views/admin/home/show.haml
+++ b/app/views/admin/home/show.haml
@@ -3,6 +3,7 @@
   Gestion du site de l'ACCQ
 
 %ul
+  %li= link_to "Engagement solennel", admin_engagements_path
   %li= link_to "Gérer les ACRQ", admin_hives_path
   %li= link_to "Gérer les signatures du manifeste", admin_members_path
   %li= link_to "Gérer les signatures de «L'appel»", admin_event_participants_path(2)
