--- a/app/views/home/engagement_candidats.html.haml
+++ b/app/views/home/engagement_candidats.html.haml
@@ -1,5 +1,35 @@
 -content_for :page_title do
   Engagement solennel des personnes candidates aux élections d'octobre 2018
 
-.well
-  Nous commencerons à publier la liste des candidatures aux élections générales du 1er octobre 2018  à partir du 1er août. (nous mettrons ici le texte de l'engagement solennel quand il sera prêt)  
+
+
+%p
+  L’ACCQ, organisation non partisane, demande aux personnes candidates aux élections générales québécoises de s’engager solennellement, si élues, à œuvrer à l’adoption, dans la première année de leur mandat, d’une Loi créant une Assemblée constituante citoyenne du Québec, ouverte et totalement libre dans ses délibérations et ses conclusions. Cette demande inclut une #{link_to "proposition de projet de Loi", projet_de_loi_path} soumise par l’ACCQ.
+
+
+
+%p
+  L’ACCQ a soigneusement évité tout ce qui, dans le projet de loi, pourrait limiter les choix des personnes constituantes quant au contenu de la première constitution de l’histoire du Québec. Nous ne voulons pas toutefois que la question soit, comme par le passé, repoussée aux calendes grecques. Pour que la souveraineté du Peuple québécois soit véritablement effective, nous avons prévu que l’exercice soit bouclé à l’intérieur du prochain mandat électoral de quatre ans, de la création de la Constituante citoyenne à la ratification de la Constitution par un référendum exécutoire.
+
+
+
+%p De plus, avant d’adopter la loi créant la Constituante, nous souhaitons que l’Assemblée nationale tienne une série de consultations publiques dans tout le Québec afin d’impliquer dès le départ l’ensemble de la population dans le processus.
+
+
+
+%p
+  Tout au long de la campagne, dans la #{link_to "liste des personnes candidates aux prochaines élections par circonscription", districts_path} que vous trouverez sur notre site Internet, nous identifierons les personnes qui auront accepté de s'engager à la convocation d'une Assemblée constituante citoyenne. Vous pourrez ainsi vérifier régulièrement si le candidat de votre choix a déjà signifié son engagement, auquel cas contraire, nous vous invitons à faire pression auprès de cette personne afin qu'elle le fasse le plus tôt possible.
+
+
+
+%p Si vous avez des informations pertinentes à nous transmettre à ce sujet, n'hésitez pas à nous écrire : #{mail_to "secretariat@accq.quebec"}
+
+
+.alert.alert-info.text-center.lead Unissons nos voix pour exiger la convocation d'une Assemblée constituante citoyenne!
+
+
+%ul
+  %li= link_to "Le projet de loi", projet_de_loi_path
+  %li= link_to "Liste des personnes candidates par circonscription", districts_path
+  %li= link_to "L'appel", event_path(2)
+  %li= link_to "Imprimez nos outils de promotion maintenant", promotional_tools_path
