--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -2,7 +2,7 @@
   %h3.no-margin
     Nous, <b>Citoyennes et Citoyens responsables</b>, nous nous engageons à promouvoir, à préparer et à provoquer la convocation d’une Assemblée constituante non partisane, totalement libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
   %p.text-center
-    #{link_to "Rejoignez maintenant votre organisation régionale (ACRQ)", hives_path, class: "btn btn-info btn-lg"}
+    #{link_to "Signez l'appel maintenant", event_path(2), class: "btn btn-info btn-lg"}
 
 .row
   .col-md-6
