--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -39,10 +39,10 @@
         .collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li= link_to "Accueil", home_path
-            %li= link_to "L'APPEL", root_path
-            %li= link_to "Constat", constat_path
+            %li= link_to "L'APPEL", event_path(2)
+            %li= link_to "Engagement solennel", engagement_candidats_path
+            %li= link_to "Projet de loi", projet_de_loi_path
             %li= link_to "Manifeste", manifest_path
-            %li= link_to "Mission", mission_path
 
             %li.dropdown
               %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
@@ -50,15 +50,18 @@
                 %span.caret
 
               %ul.dropdown-menu
+                %li= link_to "Constat", constat_path
+                %li= link_to "Mission", mission_path
                 %li= link_to "Médiathèque".html_safe, mediatheque_path
                 %li= link_to "Promouvoir", promotional_tools_path
 
             %li= link_to "Discutoire", mumble_path
+            %li= link_to "Médias", media_path
             %li= link_to "Nous joindre", nous_joindre_path
 
-    -if (controller_name == 'home' && action_name=='show') || (controller_name == 'events' && action_name == 'show' && params[:id].to_i == 2)
+    -if (controller_name == 'home' && action_name=='show')
       %header
-        =image_tag "new_cover.jpg", class: "img-responsive", style: "margin: auto"
+        =image_tag "cover_nos_voix.jpg", class: "img-responsive", style: "margin: auto"
     -else
       %header.text-center
         =image_tag "small_bg.jpg", class: "img-responsive", style: "margin: auto"
