--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -42,7 +42,7 @@
             %li= link_to "L'APPEL", event_path(2)
             %li= link_to "Engagement solennel", engagement_candidats_path
             %li= link_to "Projet de loi", projet_de_loi_path
-            %li= link_to "Manifeste", manifest_path
+            %li= link_to "Manifeste", manifest_path, id: "sign-manifest"
 
             %li.dropdown
               %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
