--- a/app/views/admin/engagements/edit.html.haml
+++ b/app/views/admin/engagements/edit.html.haml
@@ -1,4 +1,4 @@
 -content_for :page_title do
-  Nouvelle réponse d'un candidat
+  Modifier la réponse d'un candidat
 
 =render partial: "form", locals: {engagement: @engagement}
