--- a/app/views/home/projet_de_loi.html.haml
+++ b/app/views/home/projet_de_loi.html.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Projet de loi de convocation d'une Assemblée constituante citoyenne québécoise en vue d'établir une constitution pour le Québec.
 
+-breadcrumb :projet_de_loi
 #projet_de_loi
   %h2 PRÉAMBULE
 
