--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,8 +1,5 @@
-.well
-  %h3.no-margin
-    Nous, <b>Citoyennes et Citoyens responsables</b>, nous nous engageons à promouvoir, à préparer et à provoquer la convocation d’une Assemblée constituante non partisane, totalement libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
-  %p.text-center
-    #{link_to "Signez l'appel maintenant", event_path(2), class: "btn btn-info btn-lg"}
+%h3.text-center{style: "text-decoration: underline"}
+  =link_to "Engagement solennel des personnes candidates aux élections d'octobre 2018", engagement_candidats_path
 
 .row
   .col-md-6
